update: change jvm properties