@@ -1,10 +1,8 @@
 -Xms128m
 -Xmx512m
 -XX:MaxPermSize=350m
--XX:ReservedCodeCacheSize=225m
 -XX:+UseConcMarkSweepGC
--XX:SoftRefLRUPolicyMSPerMB=50
--ea
--Dsun.io.useCanonCaches=false
--Djava.net.preferIPv4Stack=true
--Dawt.useSystemAAFontSettings=lcd
+-XX:+UseParNewGC
+-XX:+CMSParallelRemarkEnabled
+-XX:+UseConcMarkSweepGC
+-XX:CMSInitiatingOccupancyFraction=75
